# EmbWorld

./: CMakeLists.txt  README.md  resources.qrc
android/: AndroidManifest.xml  build.gradle
qml/: TabBar.qml  main.qml
qml/pages/: ConversationTab.qml  ITJATab.qml  JLPTTab.qml  ListeningTab.qml  ProfileTab.qml  StudyBuddyTab.qml
src/: main.cpp  tabcontroller.cpp  tabcontroller.h
